# devlog

./: README.md  devlog.db  pyproject.toml  requirements.txt
cli/: commands.py  main.py
collector/: git_collector.py  log_collector.py  terminal_collector.py
config/: config.yaml  config_loader.py
daemon/: daemon_process.py  watcher.py
db/: database.py  models.py
dev_activity_logger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hooks/: post_commit_hook.py
processor/: analytics.py  event_processor.py
